// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverflowMenu Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)>
    <DropdownItem
      onClick={[Function]}
    >
      Edit
    </DropdownItem>
    <DropdownItem
      onClick={[Function]}
    >
      Delete
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "dark",
      "children": Array [
        <DropdownItem
          onClick={[Function]}
        >
          Edit
        </DropdownItem>,
        <DropdownItem
          onClick={[Function]}
        >
          Delete
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "persist": false,
      "position": "right",
      "size": "small",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Edit",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Edit",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Delete",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Delete",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "dark",
        "children": Array [
          <DropdownItem
            onClick={[Function]}
          >
            Edit
          </DropdownItem>,
          <DropdownItem
            onClick={[Function]}
          >
            Delete
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "persist": false,
        "position": "right",
        "size": "small",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Edit",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Edit",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Delete",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Delete",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    size="medium"
  >
    <DropdownItem
      onClick={[Function]}
    >
      Edit
    </DropdownItem>
    <DropdownItem
      onClick={[Function]}
    >
      Delete
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "dark",
      "children": Array [
        <DropdownItem
          onClick={[Function]}
        >
          Edit
        </DropdownItem>,
        <DropdownItem
          onClick={[Function]}
        >
          Delete
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "persist": false,
      "position": "right",
      "size": "medium",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Edit",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Edit",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Delete",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Delete",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "dark",
        "children": Array [
          <DropdownItem
            onClick={[Function]}
          >
            Edit
          </DropdownItem>,
          <DropdownItem
            onClick={[Function]}
          >
            Delete
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "persist": false,
        "position": "right",
        "size": "medium",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Edit",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Edit",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Delete",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Delete",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    size="large"
  >
    <DropdownItem
      onClick={[Function]}
    >
      Edit
    </DropdownItem>
    <DropdownItem
      onClick={[Function]}
    >
      Delete
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "dark",
      "children": Array [
        <DropdownItem
          onClick={[Function]}
        >
          Edit
        </DropdownItem>,
        <DropdownItem
          onClick={[Function]}
        >
          Delete
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "persist": false,
      "position": "right",
      "size": "large",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Edit",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Edit",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Delete",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Delete",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "dark",
        "children": Array [
          <DropdownItem
            onClick={[Function]}
          >
            Edit
          </DropdownItem>,
          <DropdownItem
            onClick={[Function]}
          >
            Delete
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "persist": false,
        "position": "right",
        "size": "large",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Edit",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Edit",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Delete",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Delete",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    persist={true}
  >
    <p>
      Some sample text
    </p>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "dark",
      "children": <p>
        Some sample text
      </p>,
      "onClose": [Function],
      "onOpen": [Function],
      "persist": true,
      "position": "right",
      "size": "small",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Some sample text",
      },
      "ref": null,
      "rendered": "Some sample text",
      "type": "p",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "dark",
        "children": <p>
          Some sample text
        </p>,
        "onClose": [Function],
        "onOpen": [Function],
        "persist": true,
        "position": "right",
        "size": "small",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Some sample text",
        },
        "ref": null,
        "rendered": "Some sample text",
        "type": "p",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 5`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    position="left"
  >
    <DropdownItem>
      Edit
    </DropdownItem>
    <DropdownItem>
      Delete
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "dark",
      "children": Array [
        <DropdownItem>
          Edit
        </DropdownItem>,
        <DropdownItem>
          Delete
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "persist": false,
      "position": "left",
      "size": "small",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Edit",
        },
        "ref": null,
        "rendered": "Edit",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Delete",
        },
        "ref": null,
        "rendered": "Delete",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "dark",
        "children": Array [
          <DropdownItem>
            Edit
          </DropdownItem>,
          <DropdownItem>
            Delete
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "persist": false,
        "position": "left",
        "size": "small",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Edit",
          },
          "ref": null,
          "rendered": "Edit",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Delete",
          },
          "ref": null,
          "rendered": "Delete",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 6`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    appearance="primary"
  >
    <DropdownItem>
      Edit
    </DropdownItem>
    <DropdownItem>
      Delete
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "primary",
      "children": Array [
        <DropdownItem>
          Edit
        </DropdownItem>,
        <DropdownItem>
          Delete
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "persist": false,
      "position": "right",
      "size": "small",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Edit",
        },
        "ref": null,
        "rendered": "Edit",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Delete",
        },
        "ref": null,
        "rendered": "Delete",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "primary",
        "children": Array [
          <DropdownItem>
            Edit
          </DropdownItem>,
          <DropdownItem>
            Delete
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "persist": false,
        "position": "right",
        "size": "small",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Edit",
          },
          "ref": null,
          "rendered": "Edit",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Delete",
          },
          "ref": null,
          "rendered": "Delete",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 7`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    appearance="secondary"
  >
    <DropdownItem>
      Edit
    </DropdownItem>
    <DropdownItem>
      Delete
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "secondary",
      "children": Array [
        <DropdownItem>
          Edit
        </DropdownItem>,
        <DropdownItem>
          Delete
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "persist": false,
      "position": "right",
      "size": "small",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Edit",
        },
        "ref": null,
        "rendered": "Edit",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Delete",
        },
        "ref": null,
        "rendered": "Delete",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "secondary",
        "children": Array [
          <DropdownItem>
            Edit
          </DropdownItem>,
          <DropdownItem>
            Delete
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "persist": false,
        "position": "right",
        "size": "small",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Edit",
          },
          "ref": null,
          "rendered": "Edit",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Delete",
          },
          "ref": null,
          "rendered": "Delete",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 8`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    color="red"
  >
    <DropdownItem>
      Action 1
    </DropdownItem>
    <DropdownItem>
      Action 2
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "dark",
      "children": Array [
        <DropdownItem>
          Action 1
        </DropdownItem>,
        <DropdownItem>
          Action 2
        </DropdownItem>,
      ],
      "color": "red",
      "onClose": [Function],
      "onOpen": [Function],
      "persist": false,
      "position": "right",
      "size": "small",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Action 1",
        },
        "ref": null,
        "rendered": "Action 1",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Action 2",
        },
        "ref": null,
        "rendered": "Action 2",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "dark",
        "children": Array [
          <DropdownItem>
            Action 1
          </DropdownItem>,
          <DropdownItem>
            Action 2
          </DropdownItem>,
        ],
        "color": "red",
        "onClose": [Function],
        "onOpen": [Function],
        "persist": false,
        "position": "right",
        "size": "small",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Action 1",
          },
          "ref": null,
          "rendered": "Action 1",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Action 2",
          },
          "ref": null,
          "rendered": "Action 2",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 9`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    activeColor="blue"
  >
    <DropdownItem>
      Action 1
    </DropdownItem>
    <DropdownItem>
      Action 2
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeColor": "blue",
      "appearance": "dark",
      "children": Array [
        <DropdownItem>
          Action 1
        </DropdownItem>,
        <DropdownItem>
          Action 2
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "persist": false,
      "position": "right",
      "size": "small",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Action 1",
        },
        "ref": null,
        "rendered": "Action 1",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Action 2",
        },
        "ref": null,
        "rendered": "Action 2",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeColor": "blue",
        "appearance": "dark",
        "children": Array [
          <DropdownItem>
            Action 1
          </DropdownItem>,
          <DropdownItem>
            Action 2
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "persist": false,
        "position": "right",
        "size": "small",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Action 1",
          },
          "ref": null,
          "rendered": "Action 1",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Action 2",
          },
          "ref": null,
          "rendered": "Action 2",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`OverflowMenu Component snapshots should match snapshot 10`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithTheme(OverflowMenu)
    open={true}
  >
    <DropdownTitle>
      You can't close me
    </DropdownTitle>
    <DropdownItem>
      Action 1
    </DropdownItem>
    <DropdownItem>
      Action 2
    </DropdownItem>
  </WithTheme(OverflowMenu)>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "dark",
      "children": Array [
        <DropdownTitle>
          You can't close me
        </DropdownTitle>,
        <DropdownItem>
          Action 1
        </DropdownItem>,
        <DropdownItem>
          Action 2
        </DropdownItem>,
      ],
      "onClose": [Function],
      "onOpen": [Function],
      "open": true,
      "persist": false,
      "position": "right",
      "size": "small",
      "theme": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "You can't close me",
        },
        "ref": null,
        "rendered": "You can't close me",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Action 1",
        },
        "ref": null,
        "rendered": "Action 1",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Action 2",
        },
        "ref": null,
        "rendered": "Action 2",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "dark",
        "children": Array [
          <DropdownTitle>
            You can't close me
          </DropdownTitle>,
          <DropdownItem>
            Action 1
          </DropdownItem>,
          <DropdownItem>
            Action 2
          </DropdownItem>,
        ],
        "onClose": [Function],
        "onOpen": [Function],
        "open": true,
        "persist": false,
        "position": "right",
        "size": "small",
        "theme": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "You can't close me",
          },
          "ref": null,
          "rendered": "You can't close me",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Action 1",
          },
          "ref": null,
          "rendered": "Action 1",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Action 2",
          },
          "ref": null,
          "rendered": "Action 2",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
